--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kanban Доска</title>
+    <title>Kanban Desk</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/vue.js"></script>
-    <script src="js/main.js"></script>
 </head>
 <body>
 <div id="app">
     <kanban-board></kanban-board>
 </div>
 
+<script src="js/vue.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
