--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kanban Desk</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <script defer src="js/vue.js"></script>
+    <script defer src="js/main.js"></script>
+    <title>Kanban</title>
 </head>
 <body>
 <div id="app">
-    <kanban-board></kanban-board>
+    <div class="add-card-form">
+        <h3>Новая карточка</h3>
+        <form @submit.prevent="saveCard">
+            <input class="form" v-model="formData.title" placeholder="Заголовок" required>
+            <textarea class="form"  v-model="formData.description" placeholder="Описание"></textarea>
+            <input class="data" type="date" v-model="formData.deadline" required>
+            <button class="but" type="submit">Создать</button>
+        </form>
+    </div>
+    <board :columns="columns" @add-card="addCard" @edit-card="editCard" @delete-card="deleteCard" @move-card="moveCard"></board>
 </div>
-
-<script src="js/vue.min.js"></script>
-<script src="js/main.js"></script>
 </body>
 </html>
